# pyhall-desktop

./: package-lock.json  package.json  pyhall_gpg.pub.asc
.github/workflows/: build-release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/css/: style.css
src/js/: api.js  app.js
src/js/screens/: alerts.js  config.js  coordination.js  crew.js  enroll.js  feed.js  profile.js  setup.js  status.js
