[package]
name = "pyhall-desktop"
version = "0.1.0"
description = "pyhall Desktop — Hall Monitor"
authors = ["FAFO Lab"]
edition = "2021"

[lib]
name = "pyhall_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
urlencoding = "2"
dirs = "5"
